// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridSkeleton renders correct children passing down provided props to children 1`] = `
<div>
  <div
    class="makeStyles-grid-44 makeStyles-grid-45"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Test sizing text
      </h5>
    </span>
  </div>
</div>
`;

exports[`GridSkeleton renders to match snapshot for 1 x 2 grid 1`] = `
<div>
  <div
    class="makeStyles-grid-87 makeStyles-grid-88"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Text to infer size from
      </p>
    </span>
    <span
      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Text to infer size from
      </p>
    </span>
  </div>
</div>
`;
